Sun Nov  5 23:41:45 PST 2006  Colin Watson  <cjwatson@debian.org>

	* configure.ac: Call AC_GNU_SOURCE before AC_PROG_CC, as autoconf
	  objects otherwise (due to macros called by AM_GNU_GETTEXT). Let's
	  hope using _GNU_SOURCE for everything doesn't break anything ...

Sat Nov  4 17:24:27 GMT 2006  Colin Watson  <cjwatson@debian.org>

	* GNUmakefile.in, docs/HACKING: Update references to configure.in to
	  say configure.ac instead.

Sat Nov  4 17:04:54 GMT 2006  Colin Watson  <cjwatson@debian.org>

	* configure.ac: Use AS_HELP_STRING throughout.
	  (AC_PREREQ): Bump to 2.53.

Sat Nov  4 16:52:20 GMT 2006  Colin Watson  <cjwatson@debian.org>

	* configure.in: Rename to configure.ac.

Sat Nov  4 16:41:59 GMT 2006  Colin Watson  <cjwatson@debian.org>

	* autogen.sh: Force the use of aclocal-1.8; at least 1.4 won't work
	  correctly.

Fri Oct 20 12:46:41 BST 2006  Colin Watson  <cjwatson@debian.org>

	* tools/config.guess: Update to 2006-07-02.
	* tools/config.sub: Update to 2006-09-20.

Sun Sep 17 09:20:33 BST 2006  Colin Watson  <cjwatson@debian.org>

	* lib/pipeline.c (pipeline_start): Ignore SIGPIPE in child processes
	  (Debian bug #387864).
	* docs/NEWS: Document this.

Thu Aug 10 17:23:03 BST 2006  Colin Watson  <cjwatson@debian.org>

	* src/encodings.c (get_default_device): Always use utf8 if preconv
	  is available.
	  (get_roff_encoding): Skip CJK UTF-8 hack if preconv is available.
	* src/man.c (make_roff_command): Use preconv if available to recode
	  input even if the encoding is detected by means other than looking
	  at the preprocessor line. Skip iconv preprocessing in that case.

Thu Aug 10 17:00:21 BST 2006  Colin Watson  <cjwatson@debian.org>

	* src/encodings.c (get_groff_preconv): New function, moved from
	  src/man.c because other functions here are going to need it.
	* src/encodings.h (get_groff_preconv): Prototype it.
	* src/man.c (make_roff_command): Use it.

Wed Aug  9 14:58:50 BST 2006  Colin Watson  <cjwatson@debian.org>
